// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components: UserCard should match snapshot active card: active-card 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  gap: 24px;
  justify-items: start;
  transition: all 0.3s ease;
  background: #2b2a33;
  color: white;
  width: 466px;
  border-radius: 10px;
  padding: 20px;
  background: #733cac;
}

.c0:hover {
  filter: brightness(1.2);
  cursor: pointer;
}

.c1 {
  width: 64px;
  height: 64px;
  border-radius: 100px;
}

.c2 {
  font-size: 2em;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
      src="https://i.kym-cdn.com/entries/icons/original/000/042/690/Screen_Shot_2022-11-16_at_2.24.03_PM.jpg"
    />
    <h3
      class="c2"
    >
      Gandalf
    </h3>
  </div>
</div>
`;

exports[`Components: UserCard should match snapshot not active card: not-active-card 1`] = `
.c0 {
  display: inline-flex;
  align-items: center;
  gap: 24px;
  justify-items: start;
  transition: all 0.3s ease;
  background: #2b2a33;
  color: white;
  width: 466px;
  border-radius: 10px;
  padding: 20px;
}

.c0:hover {
  filter: brightness(1.2);
  cursor: pointer;
}

.c1 {
  width: 64px;
  height: 64px;
  border-radius: 100px;
}

.c2 {
  font-size: 2em;
}

<div>
  <div
    class="c0"
  >
    <img
      class="c1"
      src="https://i.kym-cdn.com/entries/icons/original/000/042/690/Screen_Shot_2022-11-16_at_2.24.03_PM.jpg"
    />
    <h3
      class="c2"
    >
      Gandalf
    </h3>
  </div>
</div>
`;
